dnl AUTOCONF configuration for GNU gettext library for use within CLISP
dnl Bruno Haible 1.6.1998
dnl
dnl  configure.in ---<autoconf>--->> configure
dnl  configure.in ---<autoheader>--->> config.h.in
dnl
dnl  configure    ---<sh>--->> config.status
dnl          config.h.in --->> config.h
dnl     intl/Makefile.in --->> intl/Makefile
dnl       po/Makefile.in --->> po/Makefile
dnl
dnl  intl/Makefile ---<make>--->> intl/libintl.a

dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.12)
AC_INIT(intl/gettext.c)
AC_PROVIDE([AM_PROG_INSTALL])      dnl We don't need GNU's install-sh.
AM_INIT_AUTOMAKE(clisp,[`cat ${srcdir}/../VERSION`])
AM_CONFIG_HEADER(config.h)

dnl Set of available languages.
ALL_LINGUAS="en de fr es nl"

dnl Checks for programs.
AC_PROG_CC            dnl check for C compiler
AC_PROG_CPP           dnl add -O to CFLAGS if suitable
CL_PROG_RANLIB
CL_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl These are the only lines required to internationalize the package.
dnl (OK, not quite, the AC_OUTPUT has also some parts.)
AM_GNU_GETTEXT

AC_OUTPUT([intl/Makefile intl/intlh.inst po/Makefile])

