dnl  AUTOCONF configuration for TRAMPOLINE
dnl  Bruno Haible 7.11.1997
dnl
AC_INIT(trampoline_r.h.in)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_AS_UNDERSCORE
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
AC_PROG_LN_S
CL_VOID
CL_STDC_HEADERS
CL_STDLIB_H
CL_UNISTD_H
AC_TYPE_SIZE_T
AC_TYPE_OFF_T
CL_MALLOC
CL_FREE
CL_ABORT
CL_MKDIR
CL_OPEN
CL_GETPAGESIZE
CL_MACH_VM
CL_OPENFLAGS
CL_MMAP
CL_MPROTECT
CL_SHM_H
CL_SHMGET
CL_SHMAT
CL_SHMDT
CL_SHMCTL
CL_SHM
CL_CANONICAL_HOST(../../autoconf)
CL_CANONICAL_HOST_CPU
CL_CODEEXEC
CPU_OBJECTS=''
if test ${host_cpu} = hppa -o ${host_cpu} = rs6000; then
  CPU_OBJECTS="$CPU_OBJECTS "'tramp-$(CPU).o'
fi
if test ${host_cpu} = sparc -o ${host_cpu} = alpha -o ${host_cpu} = hppa -o ${host_cpu} = rs6000 -o ${host_cpu} = convex; then
  CPU_OBJECTS="$CPU_OBJECTS "'cache-$(CPU).o'
fi
AC_SUBST(CPU_OBJECTS)
if test ${host_cpu} = mips -o ${host_cpu} = mips64; then
AC_CHECK_HEADERS(sys/cachectl.h)
fi
if test ${host_cpu} = m88k; then
AC_CHECK_HEADERS(sys/m88kbcs.h)
fi
AC_OUTPUT(Makefile)
